# nitro

./: .gitignore  Cargo.toml  NEXT_SESSION_28_BRIEF.md  NEXT_SESSION_29_BRIEF.md  NEXT_SESSION_31_BRIEF.md  NEXT_SESSION_32_BRIEF.md  PHASE_2_AUTO_ROUTING_DESIGN.md  README.md  RUSTYTAGS_PERFORMANCE_ANALYSIS.md  SESSION_22_FINDINGS.md  SESSION_22_SUMMARY.md  SESSION_23_SUMMARY.md  SESSION_24_SUMMARY.md  SESSION_25_SUMMARY.md  SESSION_26_SUMMARY.md  SESSION_27B_FASTAPI_ADAPTER.md  SESSION_27_SUMMARY.md  SESSION_28_SUMMARY.md  SESSION_29_SUMMARY.md  SESSION_30_SUMMARY.md  SESSION_31_SUMMARY.md  browser_tool.js  check_status.py  claude-progress.txt  count_features.py  feature_list.json  homepage.html  init.sh  manual_test_fastapi.py  nitro.db  pyproject copy.toml  pyproject.toml  session10-final-summary.txt  session11-final-summary.txt  session12-final-summary.txt  session13-final-summary.txt  session15-final-summary.txt  session20-progress.txt  session22-progress.txt  session23-progress.txt  (+46 more)
docs/: .gitignore  TUTORIAL.md  api-reference.md  app.py  event-driven-routing.md
docs_app/: app.py  routes.py
documents/: API_REFERENCE.md
examples/: blog_demo.py  counter_auto_routed.py  counter_demo.py  custom_routes_demo.py  datepicker_example.py  ecommerce_demo.py  fastapi_memory_backend.py  fastapi_todo_app.py  fasthtml_counter_auto_routed.py  fasthtml_todo_app.py  flask_counter_auto_routed.py  flask_page_demo.py  flask_todo_app.py  migrated_counter_app.py  migration_from_starmodel.md  model_form_example.py  monitoring_demo.py  nitro.db  sanic_auth_app.py  sanic_budget_app.py  sanic_calendar_app.py  sanic_chat_app.py  sanic_contacts_app.py  sanic_counter_app.py  sanic_dashboard_app.py  sanic_datatable_app.py  sanic_filemanager_app.py  sanic_gallery_app.py  sanic_kanban_app.py  sanic_markdown_app.py  sanic_notes_app.py  sanic_notifications_app.py  sanic_poll_app.py  sanic_pomodoro_app.py  sanic_showcase_app.py  sanic_todo_app.py  sanic_tracker_app.py  sanic_wizard_app.py  starlette_counter_app.py  versioned_api_demo.py
logs/: .9b6a5bc19b228471ddb2d25258f00844061bfa9b-audit.json
nitro/: CHANGELOG.md  __init__.py  __init__.pyi  claude-progress.txt  config.py  monitoring.py  template_utils.py  templates.py  utils.py
notebooks/: app.py  molab.py
tests/: test_action_helper.py  test_actions.py  test_adapter_fasthtml.py  test_admin.py  test_advanced_datastar.py  test_advanced_entity.py  test_advanced_persistence.py  test_api.py  test_async_support.py  test_audit.py  test_auth.py  test_cache.py  test_catch_all.py  test_cli_db.py  test_config.py  (+47 more)
(+483 files in other folders)
