[project]
name = "nitro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ndendic", email = "ndendic@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "blinker>=1.9.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "rusty-tags>=0.6.1",
    "typer>=0.19.2",
]

[project.scripts]
nitro = "nitro.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

