[project]
name = "nitro-boost"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ndendic", email = "ndendic@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "mako>=1.3.10",
    "nitro-events>=0.1.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "rusty-tags>=0.6.3",
    "sqlmodel>=0.0.31",
    "typer>=0.19.2",
    "ulid-py>=1.1.0",
]

[project.optional-dependencies]
# Deprecated: blinker is no longer used, kept for transition
legacy = ["blinker>=1.9.0"]
# Optional backends and services
redis = ["redis>=5.0.0"]
auth-jwt = ["python-jose[cryptography]>=3.3.0", "passlib[bcrypt]>=1.7.4"]

[project.scripts]
nitro = "nitro.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./nitro"]

[tool.ty.environment]
root = ["./nitro","./docs","./notebooks"]

[tool.uv.workspace]
members = [
    "autocode",
]

[tool.uv.sources]
nitro-events = { path = "../nitro-events" }

[dependency-groups]
dev = [
    "fastapi[standard]>=0.118.0",
]
